fixing image being off-center

--- a/css/layouts/marketing.css
+++ b/css/layouts/marketing.css
@@ -170,25 +170,19 @@ p.splash-subhead {
 .splash {
     /* absolute center .splash within .splash-container */
     width: 80%;
-    height: 50%;
+    height: 75%;
     margin: auto;
     position: absolute;
-    top: 100px; left: 0; bottom: 0; right: 0;
+    top: 0; left: 0; bottom: 0; right: 0;
     text-align: center;
     text-transform: uppercase;
     font-family: 'Press Start 2P', Verdana, sans-serif;
 }
 
 /* This is the main heading that appears on the blue section */
-.splash-head {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    border: 3px solid white;
-    padding: 1em 1.6em;
-    font-weight: 100;
-    border-radius: 5px;
-    line-height: 1em;
+
+img.splash-head {
+  margin: auto;
 }
 
 /* This is the subheading that appears on the blue section */
